@@ -41,6 +41,8 @@ playing the viola and hacking some code.
 
 <li>Erik Sandberg, Bug meister
 
+<li>Mats Bengtsson, Support Guru.
+
 </ul>
 
 
@@ -68,9 +70,6 @@ out to
 <li> Werner Lemberg for his TeXpertise
 
 <li> David Chan and Chris Sawer, for running the Mutopia archive
-
-<li> Mats Bengtsson, for tirelessly answering
-questions
 
 <li> Matthias Neeracher, for keeping the MacOS X fink port up-to-date.
 
