@@ -1,6 +1,4 @@
 [
-  ("macos.html", _ ("Fink")),
-  ("cygwin.html", _ ("Cygwin")),
   ("getting-started.html", _ ("First use")),
   ("using.html", _ ("User help")),
   ]
