@@ -77,10 +77,10 @@
   Get it from the <a href="../install">download page</a>.
   
     <p>
-      Moreover it's also free (as in "speech") software.  It comes with
-      source code, and permission to change and copy it.  So, are you
+       It's also free (as in "speech") software.  It comes with source
+      code, and permission to change and copy it.  So, are you
       irritated by a bug, or yearning for a feature?  Simply add it
-      yourself, or pay someone else to do it.
+      yourself, or <a href="../sponsor/">pay someone else</a> to do it.
     </p>
   </dd>
 
@@ -99,7 +99,7 @@
   <dt>Excellent support</dt>
   <dd>
     LilyPond runs on all popular platforms: Linux, MacOS X, and Windows.
-    LilyPond comes with a 230 page user manual and over 400 example
+    LilyPond comes with a 300 page user manual and over 400 example
     files.  There is an active user community answering questions on the
     <a href="http://news.gmane.org/gmane.comp.gnu.lilypond.general">Lilypond
       user</a> mailing list, while the
