@@ -159,9 +159,7 @@ Thank you all SO MUCH for your hard work and dedication!&rdquo;
 
 
 <p>
-  &ldquo;Anyway, LilyPond does an amazingly good job -- and the input files
-  are *really* small: 17kByte for 5 pages of fairly complicated modern
-  music is terrific!&rdquo;
+  &ldquo;Anyway, LilyPond does an amazingly good job! 
 </p>
 <p align="right">
   <em>
